# virtualcandy

./: .gitignore  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  vc_common_code.sh  virtualcandy.sh  virtualcandy.zsh
scripts/: publish
src/: vc_common_code.sh  vc_config.sh  vcfreeze.py  vcpkgs.py  virtualcandy.sh  virtualcandy.zsh
src/tmpl/: pkg_makefile.tmpl.sh  pkg_setup.tmpl.sh
virtualcandy/: __init__.py  vc_common_code.sh  vcpkgs  vcshellinstaller
virtualcandy/lib/: vc_common_code.sh  vc_config.sh  virtualcandy.sh  virtualcandy.zsh
virtualcandy/lib/tmpl/: pkg_setup.tmpl.sh
virtualcandy/tmpl/: pkg_init.tmpl.sh
